<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bground"
    tools:context=".SettingsActivity">

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:background="@drawable/layout_style"
                android:paddingEnd="@dimen/activity_smaller_margin"
                android:paddingLeft="@dimen/activity_smaller_margin"
                android:paddingStart="@dimen/activity_smaller_margin"
                android:text="@string/set_time"
                android:textAllCaps="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_style"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingEnd="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_smaller_margin"
                android:paddingStart="@dimen/activity_vertical_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

                <Button
                    android:id="@+id/decrement_button"
                    style="@style/ButtonStyle"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="@dimen/activity_smaller_margin"
                    android:layout_marginRight="@dimen/activity_smaller_margin"
                    android:background="@drawable/button_style"
                    android:onClick="decrement"
                    android:text="@string/decrement_button" />

                <TextView
                    android:id="@+id/timer_text_view"
                    style="@style/TextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_time" />

                <Button
                    android:id="@+id/increment_button"
                    style="@style/ButtonStyle"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginLeft="@dimen/activity_smaller_margin"
                    android:layout_marginStart="@dimen/activity_smaller_margin"
                    android:background="@drawable/button_style"
                    android:onClick="increment"
                    android:text="@string/increment_button" />

                <TextView
                    style="@style/TextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_smaller_margin"
                    android:layout_marginStart="@dimen/activity_smaller_margin"
                    android:text="@string/minutes" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_vertical_margin" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_style"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingTop="@dimen/activity_smaller_margin">

                <TextView
                    style="@style/TextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_smaller_margin"
                    android:paddingEnd="@dimen/activity_smaller_margin"
                    android:paddingLeft="@dimen/activity_smaller_margin"
                    android:paddingStart="@dimen/activity_smaller_margin"
                    android:text="@string/set_tune"
                    android:textAllCaps="true" />

                <Spinner
                    android:id="@+id/tune_spinner"
                    style="@style/ButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_vertical_margin" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_style"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingTop="@dimen/activity_smaller_margin">

                <TextView
                    style="@style/TextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/activity_vertical_margin"
                    android:layout_marginRight="@dimen/activity_vertical_margin"
                    android:layout_marginTop="@dimen/activity_smaller_margin"
                    android:paddingLeft="@dimen/activity_smaller_margin"
                    android:paddingRight="@dimen/activity_smaller_margin"
                    android:paddingStart="@dimen/activity_smaller_margin"
                    android:text="@string/set_mode"
                    android:textAllCaps="true" />

                <ToggleButton
                    android:id="@+id/toggleButton"
                    style="@style/ButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_smaller_margin"
                    android:background="@drawable/toggle_style"
                    android:checked="false"
                    android:textOff="No"
                    android:textOn="Yes" />

            </LinearLayout>

            <Button
                android:id="@+id/button2"
                style="@style/ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="24dp"
                android:layout_weight="2.91"
                android:background="@drawable/button_style"
                android:onClick="settingsDone"
                android:text="@string/ok_button" />

        </LinearLayout>
    </FrameLayout>
</ScrollView>