<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bground"
    tools:context=".HelpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="@dimen/activity_smaller_margin"
            android:text="@string/thanks"
            android:textColor="#ffffff" />

        <com.anuradha.dhyana.NestedListView
            android:id="@+id/help_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_smaller_margin"
            android:layout_marginStart="@dimen/activity_smaller_margin"
            android:background="@drawable/layout_style"
            android:divider="@null"
            android:listSelector="@android:color/transparent"
            />

        <TextView
            style="@style/BodyStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_smaller_margin"
            android:background="@drawable/layout_style"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_vertical_margin"
            android:paddingTop="3dp"
            android:text="@string/features" />

        <com.anuradha.dhyana.NestedListView
            android:id="@+id/features_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_smaller_margin"
            android:layout_marginStart="@dimen/activity_smaller_margin"
            android:background="@drawable/layout_style"
            android:divider="@null"
            android:listSelector="@android:color/transparent" />

        <TextView
            style="@style/BodyStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_smaller_margin"
            android:text="@string/help_detail"
            android:textColor="#ffffff" />
    </LinearLayout>
</ScrollView>